--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,4 +32,5 @@
     <string name="geomatica">Geomatica</string>
     <string name="geofisica">Geofisica</string>
     <string name="telecom">Telecomunicaciones</string>
+    <string name="txt_age">{0} Años</string>
 </resources>
